# split2samples

./: .gitignore  Cargo.toml  Convert_to_Rust.R  Igha.txt  Igha_search.txt  Manual_tests.txt  News.md  README.md  README_TODO.md  Rational_Mapper.md  Rhapsody_cell_keys.r.txt  Rhapsody_cell_keys_v2.txt  TestCase_results.txt  btg_indices.txt  btg_indices_long.txt  check_that.txt  copy_to_sens5.sh  git - Shortcut.lnk  hamming_dist_Ighm_reads.txt  idenitfy_index_failing_reads.R  idenitfy_index_failing_reads.sh  install_into_path_unix.sh  install_resources_unix.sh  install_resources_windows.ps1  install_unix_user.sh  needleman_Ighm_reads.txt  timings.txt  tmp
.github/workflows/: rust.yml
Rtest/: TestExample.R  validatesRes.rds
src/: analysis.rs  analysis_genemapper.rs  analysis_genomic_mapper.rs  analysis_te.rs  cellids.rs  cellids10x.rs  errors.rs  gene.rs  gene_family.rs  geneids.rs  int_to_str.rs  last5.rs  lib.rs  main.rs  mapping_info.rs  ofiles.rs  opts_te.rs  sampleids.rs  traits.rs
src/analysis/: analysis_te.rs  fast_mapper.rs  gene_mapper.rs  genomic_mapper.rs  minimal_sam.rs  mod.rs
src/cellids/: cellIDsError.rs
src/cellids10x/: cellid10x.rs  cellids10x.rs  mod.rs
src/fast_mapper/: fast_mapper.rs  genes_data.rs  mod.rs
src/genes_mapper/: cigar.rs  gene_data.rs  gene_link.rs  genes_mapper.rs  mapper_result.rs  mod.rs  multi_match.rs  needleman_wunsch_affine.rs  sequence_record.rs  sequence_record_rev.rs
src/singlecelldata/: ambient_rna_detect.rs  cell_data.rs  indexed_genes.rs  mod.rs  singlecelldata.rs
testData/: .gitignore  2276_20220531_chang_to_rpl36a_amplicons.fasta  MyAbSeqPanel.fasta  S1_1.11.1.yml  S2_1.11.1.yml  Sry_false_positives_included.txt  addOn.fa  cellids.txt  genes.fasta  problematic_match.fasta
testData/BD_results/: .gitignore  CanNotReproduceBDsResults.html  CanNotReproduceBDsResults.ipynb  CombinedAnalysis_scanpy-gene_mapper.ipynb  CombinedAnalysis_scanpy.ipynb  CombinedAnalysis_scanpy_v1.2.1.ipynb  CombinedAnalysis_scanpy_v1.2.1.py  Combined_S1Subset_DBEC_MolsPerCell.csv  Combined_S2Subset_DBEC_MolsPerCell.csv  Problematix_genes.csv  S1Subset_Sample_Tag_Calls.csv  S2Subset_Sample_Tag_Calls.csv  Speed_comparison.ipynb  Untitled.ipynb  convert_background.sh  identfy_failing_index_reads.R
testData/TEmapperTest/: .gitignore  index.1.Index  index.1.Index.txt  index.1.gene.txt
tests/: analysis_gene_mapper_internals_R1.rs  analysis_gene_mapper_internals_R2.rs  analysis_genomic_mapper_internals_R2.rs  cell_data.rs  cellid.rs  cellids.rs  cigar.rs  create_genome_index.rs  creating_cigars.rs  fast_mapper.rs  gene_index_usage_and_issues.rs  genes.rs  genes_data.rs  genes_mapper.rs  genomic_index_usage_and_issues.rs  indexed_genes.rs  int_to_str.rs  mapper_entries.rs  needleman_wunsch_affine.rs  quantify_executable.rs  quantify_executable_fast_mapper.rs  quantify_executable_gene_mapper.rs  quantify_executable_genomic_mapper.rs  second_seq.rs  seqrec.rs  singe_cell_data.rs  singecelldata.rs  test_mapping_efficiency.rs
this/: .gitignore  Cargo.toml
this/src/: analysis.rs  cellids.rs  cellids10x.rs  fast_mapper.rs  gene.rs  gene_family.rs  geneids.rs  geneids_old.rs  ifiles.rs  int_to_str.rs  last5.rs  lib.rs  mapper_entries.rs  mapping_info.rs  ofiles.rs  sampleids.rs  samples.rs  singlecelldata.rs  traits.rs
this/tests/: fast_mapper.rs  int_to_str.rs
(+10 files in other folders)
