[package]
name = "rustody"
version = "2.2.0"
edition = "2021"
license-file = "LICENSE"
description = "Split BD rapsody fastq files into sample specific fastq files"
homepage = "https://github.com/stela2502/split2samples"
repository = "https://github.com/stela2502/split2samples"
readme = "README.md"

[dependencies]
ahash = "0.7.6"
anyhow = "1.0.66"
bincode = "1.3"
cargo-platform = "0.1.7"
cargo_metadata = "0.17.0"
chrono = "0.4.33"
clap = { version = "3.0.14", features = ["derive"] }
csv = "1.1"
flate2 = "1.0.24"
glob = "0.3.0"
indicatif = {version = "*", features = ["rayon"]}
kmers = { git="https://github.com/COMBINE-lab/kmers" }
needletail = "0.5.1"
noodles-bam = "0.26.0"
noodles-bgzf = "0.26.0"
num_cpus = "1.14"
rayon = "1.5"
regex = "1"
serde = { version="1.0.103", features = ["derive"] }
num-traits = "*"