[package]
name = "this"
version = "1.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kmers = { git="https://github.com/COMBINE-lab/kmers" }
needletail = "0.4"
flate2 = "1.0.24"
indicatif = {version = "*", features = ["rayon"]}
byteorder = "1.0"